Fri Sep  28 23:53:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed memleak in ewl_config_get_render_method().
	* Added a ewl_config_reread_and_apply(), which rereads the user config
	  and apply the changed settings.
	* Added a never ending timer which calls ewl_config_reread_and_apply
	  every 0.5 second.
	* Cleaned up ewl_debug.h.
	* Made the test program use ewl_config_set_* and ewl_config_get_*
	  instead of duplicating code.

Fri Sep  28 20:56:15 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed ewl_config, Needed to create ~/.e/ewl/config if it doesnt exist.
	* Fixed segv in ewl_config when the user config did not exist.
	* Fixed some autoconf/automake magic.

Fri Sep  28 17:28:42 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Forgot to configure the entry when deleting to left & right, fixed.
	* Now it's only possible to entry numbers in a Ewl_Spinner,
	  and when you change em, the value updates when you deselect the
	  spinner.
	* Spiffed up the Ewl_CheckButton & Ewl_RadioButton graphics.

Fri Sep  28 08:51:10 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Created a ewl_config application under tools/ewl_config, which you
	  can setup ewl in a easy way with.
	* Added a ewl_radiobutton_set_checked, and a ewl_radiobutton_is_checked.
	* Added a ewl_checkbutton_set_checked, and a ewl_checkbutton_is_checked.

Fri Sep  28 05:14:06 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Forgot to add a destroy callback to free Ewl_Notebook->pages.

Fri Sep  28 04:42:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a Ewl_Notebook widget.
	* Created a Ewl_Notebook test section in the test program.

Thu Sep  27 18:25:12 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Converted the Ewl_Spinner to match the new code.
	* I set the default Ewl_Entry font size to 10.
	* Added a Ewl_Spinner test section to the test application.
