@@ -14,13 +14,14 @@ typedef struct _ewl_checkbutton Ewl_CheckButton;
 struct _ewl_checkbutton
 {
 	Ewl_Button button;
+	Ewl_Position label_position;
 	unsigned int checked;
 };
 
 Ewl_Widget *ewl_checkbutton_new(char *l);
 
-/* 1 for checked and 0 for not checked. */
 void ewl_checkbutton_set_checked(Ewl_Widget * w, int c);
 int ewl_checkbutton_is_checked(Ewl_Widget * w);
+void ewl_checkbutton_set_label_position(Ewl_Widget * w, Ewl_Position p);
 
 #endif /* __EWL_CHECKBUTTON_H__ */
