@@ -1,3 +1,10 @@
+Sat Sep  29 07:37:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
+	* Added a Ewl_Position enum.
+	* Made it possible to set the label position on Ewl_CheckButton's &
+	  Ewl_RadioButton's.
+	* Read the user config before it had been created in ewl_config when
+	  running it for the first time.
+
 Fri Sep  28 23:53:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
 	* Fixed memleak in ewl_config_get_render_method().
 	* Added a ewl_config_reread_and_apply(), which rereads the user config
